# neat_lstm

./: CMakeLists.txt  LICENSE  README.md
include/neat_lstm/: activation.h  config_store.h  connection_gene.h  innovation.h  lstm_unit_gene.h  mutation.h  network.h  node_gene.h  population.h  reproduction.h  species.h  test.txt
include/neat_lstm/utils/: genome_utils.h  math.h  node_utils.h  random.h
proto/: CMakeLists.txt  config.proto  structures.proto
res/: default.config
src/: activation.cc  config_store.cc  connection_gene.cc  innovation.cc  lstm_unit_gene.cc  main.cc  mutation.cc  network.cc  node_gene.cc  population.cc  reproduction.cc  species.cc
src/macros/: assert.h
src/utils/: genome_utils.cc  node_utils.cc  random.cc
